--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 .body{
-  background-image: url('https://image.freepik.com/free-photo/beauty-cosmetics-products-with-bag_23-2148598587.jpg');
+  background-image: url('https://ordinaryfaith.net/wp-content/uploads/2016/03/Gray-plain-website-background.jpg');
   background-repeat:repeat;
   background-size:2000px;
 }
