--- a/main.css
+++ b/main.css
@@ -91,8 +91,8 @@ border-radius:20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: rgb(8, 124, 124);
   font-style: italic;
-    height: 150px;
   text-align: center;
+   width: 100%;
 }
 .ps h1{
   font-size: 230%;
