--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@
 .ab{
   position: relative;
   z-index: 1;
-  background: #fae4e4ce;
+  background: #f7adda;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 55px;
