--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@
 }
 .ab h1{
   font-size: 230%;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:cursive;
   color: rgb(8, 124, 124);
   font-style: italic;
   font-weight: bold;
@@ -90,7 +90,7 @@ border-radius:20px;
 
 .form h1{
   font-size:180%;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:cursive;
   color: rgb(8, 124, 124);
   font-style: italic;
   text-align: center;
@@ -98,7 +98,7 @@ border-radius:20px;
 }
 .ps h1{
   font-size: 230%;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:cursive;
   color: rgb(8, 124, 124);
   font-style: italic;
   text-align: center;
