--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 .body{
   background-image: url('https://ordinaryfaith.net/wp-content/uploads/2016/03/Gray-plain-website-background.jpg');
   background-repeat:repeat;
-  background-size:2000px;
+  background-size:cover;
 }
 
 
